--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react-glider": "^4.0.2",
     "react-hook-form": "^7.45.0",
     "react-router-dom": "^6.12.1",
+    "react-slider": "^2.0.6",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-slider": "^1.3.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
