--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "lucide-react": "^0.381.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-glider": "^4.0.2",
     "react-hook-form": "^7.45.0",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.12.1",
     "react-slider": "^2.0.6",
     "tailwind-merge": "^2.3.0"
