--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      
+    },
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
@@ -23,3 +28,12 @@
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
+
+
+  // "@/*": ["./src/*"],
+  //       "@components/*": ["./components/*"],
+  //       "@assets": ["./assets/*"],
+  //       "@context/*": ["./context/*"],
+  //       "@hooks/*": ["./hooks/*"],
+  //       "@pages/*": ["./pages/*"],
+  //       "@services/*": ["./services/*"]
