--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "js-cookies": "^1.0.4",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.381.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
