--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "SideNavBar.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
