--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.12.1",
     "react-slider": "^2.0.6",
