--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^6.1.1",
+    "@capacitor/cli": "^6.1.1",
+    "@capacitor/core": "^6.1.1",
+    "@ionic/react": "^8.2.6",
     "@types/js-cookie": "^3.0.6",
     "@zxcvbn-ts/core": "^3.0.4",
     "@zxcvbn-ts/language-common": "^3.0.4",
     "@zxcvbn-ts/language-en": "^3.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "ionicons": "^7.4.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.381.0",
@@ -24,7 +29,7 @@
     "react-hook-form": "^7.45.0",
     "react-loading-skeleton": "^3.4.0",
     "react-multi-carousel": "^2.8.5",
-    "react-router-dom": "^6.12.1",
+    "react-router-dom": "^6.25.1",
     "react-slider": "^2.0.6",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0"
@@ -32,6 +37,8 @@
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-slider": "^1.3.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
