--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/runtime": "^7.25.0",
     "@capacitor/android": "^6.1.1",
     "@capacitor/cli": "^6.1.1",
     "@capacitor/core": "^6.1.1",
