--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@zxcvbn-ts/language-en": "^3.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.1.6",
     "ionicons": "^7.4.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -36,6 +37,7 @@
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-router": "^5.1.20",
