--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -1,5 +1,6 @@
 ext {
-    minSdkVersion = 22
+    // minSdkVersion = 22
+    minSdkVersion = 23
     compileSdkVersion = 34
     targetSdkVersion = 34
     androidxActivityVersion = '1.8.0'
