--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@capacitor/android": "^6.1.1",
     "@capacitor/cli": "^6.1.1",
     "@capacitor/core": "^6.1.1",
+    "@cashfreepayments/cashfree-js": "^1.0.5",
     "@ionic/react": "^8.2.6",
     "@types/js-cookie": "^3.0.6",
     "@zxcvbn-ts/core": "^3.0.4",
     "@zxcvbn-ts/language-common": "^3.0.4",
     "@zxcvbn-ts/language-en": "^3.0.2",
     "clsx": "^2.1.1",
+    "cordova-plugin-cashfree-pg": "^1.0.6",
     "date-fns": "^3.6.0",
     "dompurify": "^3.1.6",
     "ionicons": "^7.4.0",
